# consistency-auditor

./: .gitignore  AUDITOR_SPEC.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: backtest.csv  live.csv
outputs/: matched.csv  unmatched.csv
src/consistency_auditor/: cli.py  events.py  hashing.py  io_csv.py  match.py  models.py  recorder.py  report_csv.py  schemas.py  snapshot.py
src/consistency_auditor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_cli_audit.py  test_cli_missing_files.py  test_cli_output.py  test_fail_on_exit_codes.py  test_io_csv_aliases.py  test_match.py  test_price_tolerance.py  test_recorder_simulation.py  test_report_csv.py  test_smoke.py
