[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "consistency-auditor"
version = "0.1.0"
description = "Audit backtest vs live trading consistency (entries/exits, slippage, latency) and generate reports."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Mohsen Moghaddam"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
consistency-auditor = "consistency_auditor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100